# uncertainty-aware-diagnosis

./: .gitignore  .pre-commit-config.yaml  Demo.ipynb  README.md  calibration_demo.ipynb  calibration_experiment.ipynb  lbz_experiment.ipynb  makefile  pyproject.toml  synthetic_admissions_preprocessing.ipynb
src/calibrators/: __init__.py  base.py  dirichlet.py  evaluator.py  platt.py  temperature.py
src/synthetic_admissions/: __init__.py  synthetic_admission_code.py
src/uncertainty_aware_diagnosis/: __init__.py  calibrators.py  curriculum_aware_dataloader.py  load_idc10_data.py  mlp_classifier.py  noise_robustness_improvements.py  preprocessing.py  stratified_data_split.py
