[project]
name = "uncertainty-aware-diagnosis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "luuk005", email = "114167773+luuk005@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "betacal>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.27.1",
    "pre-commit>=4.2.0",
    "pyarrow>=19.0.1",
    "pycalib>=0.1.0.dev6",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchmetrics>=1.7.1",
]

[project.scripts]
uncertainty-aware-diagnosis = "uncertainty_aware_diagnosis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
    "pre-commit>=4.2.0",
]

[tool.pyright]
reportMissingImport = false
